--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@layer components {
+  .input {
+    @apply bg-transparent rounded-md border-2 border-gray-300 hover:bg-gray-200 focus:bg-gray-200 transition px-3 py-2;
+  }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  .selectArrows {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(31 41 55)'><polygon points='0,0 100,0 50,50'/></svg>")
+      no-repeat;
+    background-size: 10px;
+    background-position: calc(100% - 11px) 62%;
+    background-repeat: no-repeat;
+    cursor: pointer;
+  }
+
+  .invisibleFade {
+    @apply invisible opacity-0 transition-all;
+  }
+
+  .visibleFade {
+    @apply visible opacity-100 transition-all;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
